--- a/Pages/Todo.razor
+++ b/Pages/Todo.razor
@@ -2,13 +2,17 @@
 
 <PageTitle>Todo</PageTitle>
 
-<h3>Todo</h3>
+<h1>Todo (@todos.Count(todo => !todo.IsDone))</h1>
 
 
 <ul>
     @foreach (var todo in todos)
     {
-        <li>@todo.Title</li>
+        //<li>@todo.Title</li>
+        <li>
+            <input type="checkbox" @bind="todo.IsDone" />
+            <input @bind="todo.Title" />
+        </li>
     }
 </ul>
 
